[gd_scene load_steps=7 format=3 uid="uid://b3n0wev8l11e8"]

[ext_resource type="Script" path="res://scene/MainGame/Enemy/EnemyModel.gd" id="1_4jb68"]
[ext_resource type="Texture2D" uid="uid://cgftcjg4bgksd" path="res://assets/enemy_1_sheet.png" id="1_prw83"]

[sub_resource type="Animation" id="Animation_iqvrs"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(0.225313, 2.63902, 0.297301, 2.92817, 0.366022),
"update": 0,
"values": [Vector2(0, -6), Vector2(0, -6.25), Vector2(0, -6), Vector2(0, -5.75), Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso/Arm1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(3.03143, 0.435275, 2, 0.31864),
"update": 0,
"values": [Vector2(-5, 1), Vector2(-5, 1.5), Vector2(-5, 2), Vector2(-5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Arm2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2.54912, 1.07177, 4.5948),
"update": 0,
"values": [Vector2(5, 4.76837e-07), Vector2(6, -0.5), Vector2(5, 4.76837e-07)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/Gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 4.76837e-07), Vector2(2, 4.76837e-07), Vector2(2, 4.76837e-07), Vector2(2, 4.76837e-07)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Torso/Gun:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 2.46229, 1),
"update": 0,
"values": [-1.5708, -1.6057, -1.64061, -1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Legs:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2.07053, 0.5, 1.86607),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Torso/Gun:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Torso/GunAim:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xnfi1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso/Arm1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Arm2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 4.76837e-07)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/Gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 4.76837e-07)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Torso/Gun:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Legs:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Torso/Gun:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Torso/GunAim:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Torso/GunAim/MuzzleFlash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Torso/GunAim/MuzzleFlash:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pkh5d"]
resource_name = "Attack"
length = 3.0
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/GunAim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso/Gun:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/GunAim/MuzzleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.96, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/GunAim/MuzzleFlash:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.96, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnq67"]
_data = {
"Attack": SubResource("Animation_pkh5d"),
"Idle": SubResource("Animation_iqvrs"),
"RESET": SubResource("Animation_xnfi1")
}

[node name="EnemyModel" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4jb68")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("1_prw83")
offset = Vector2(0, 1)
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="Torso" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(0, 8, 8, 8)

[node name="Arm1" type="Sprite2D" parent="Torso"]
z_index = 1
position = Vector2(-5, 1)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(9, 1, 2, 2)

[node name="Arm2" type="Sprite2D" parent="Torso"]
z_index = 1
position = Vector2(5, 4.76837e-07)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(9, 1, 2, 2)

[node name="Gun" type="Sprite2D" parent="Torso"]
position = Vector2(2, 4.76837e-07)
rotation = -1.5708
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(18, 3, 10, 26)

[node name="GunAim" type="Sprite2D" parent="Torso"]
z_index = 3
position = Vector2(1, 2)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(16, 3, 2, 16)

[node name="MuzzleFlash" type="Sprite2D" parent="Torso/GunAim"]
z_index = 3
position = Vector2(0, 10)
rotation = 0.785398
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(9, 19, 5, 5)

[node name="Legs" type="Node2D" parent="."]

[node name="Leg1" type="Sprite2D" parent="Legs"]
z_index = -2
position = Vector2(-3, 8)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(9, 1, 2, 2)

[node name="Leg2" type="Sprite2D" parent="Legs"]
z_index = -2
position = Vector2(3, 8)
texture = ExtResource("1_prw83")
region_enabled = true
region_rect = Rect2(9, 1, 2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnq67")
}
